# mini-projects-python

./: .gitignore  README.md
JSON parser/: README.md
JSON parser/app/: lexer.py  parser.py  read.py  tokentypes.py
JSON parser/tests/: test_read.py
application load balancer/: README.md
application load balancer/app/: dummyserver.py  loadbalancer.py
build JSON parser/: README.md  pyproject.toml
build JSON parser/app/: parser.py  read.py  tokentypes.py
build JSON parser/tests/: test_lexer.py
compression tool/: README.md  pyproject.toml  requirements.txt
compression tool/app/: compress_tool.py  huffman.py
compression tool/tests/: some.txt  test_compress.py
cut-tool/: README.md  pyproject.toml  sample.txt
cut-tool/app/: pycut.py
cut-tool/tests/: sample.csv  sample.txt  test.py  test_pycut.py
make a wc tool/: README.md
make a wc tool/pywc/: README.md  pyproject.toml
make a wc tool/pywc/pywc/: pywc.py
make a wc tool/pywc/tests/: test_pywc.py
wc tool/: README.md
wc tool/pywc/: pyproject.toml
wc tool/pywc/pywc/: pywc.py
